added delete function and added `execution.intensity` sync
* added a function to delete the state's when the device was deleted in the Ui.
* It is now also possible to delete the token from the sync box.
* `execution.intensity` is not offered by the API to query => new function written to update the state

--- a/admin/src/i18n/de.json
+++ b/admin/src/i18n/de.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "Der Adapter ist ausgeschaltet, um ein neues Gerät zu erstellen, muss der Adapter eingeschaltet sein. Bitte schalte den Adapter ein!",
+	"adapterOffline": "Der Adapter ist ausgeschaltet, zum Anlegen eines neuen Gerätes oder zum Bearbeiten/Löschen muss der Adapter eingeschaltet sein. Bitte schalten Sie den Adapter ein!",
 	"add": "hinzufügen",
 	"addBox": "Box hinzufügen",
 	"addNewBox": "Neue Hue Sync Box hinzufügen",
 	"cancel": "Abbrechen",
 	"close": "Schließen",
 	"delete": "Löschen",
-	"deleteConfirm": "Bist du sicher, dass du > %s < löschen willst?",
-	"deleteTitle": "%s Löschen",
 	"edit": "Update",
 	"editBoxConfig": "Konfiguration der Hue Sync Box bearbeiten",
 	"editConfig": "Bearbeiten",
