--- a/admin/src/i18n/en.json
+++ b/admin/src/i18n/en.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "The adapter is switched off, to create a new device the adapter must be switched on. Please switch on the adapter!",
+	"adapterOffline": "The adapter is switched off, to create a new device or to edit / delete the adapter must be switched on. Please turn on the adapter!",
 	"add": "add",
 	"addBox": "add Box",
 	"addNewBox": "Add new Hue Sync Box",
 	"cancel": "cancel",
 	"close": "Close",
 	"delete": "Delete",
-	"deleteConfirm": "Are you sure you want to delete > %s <?",
-	"deleteTitle": "%s Delete",
 	"edit": "Update",
 	"editBoxConfig": "Edit Hue Sync Box configuration",
 	"editConfig": "Edit",
