--- a/admin/src/i18n/es.json
+++ b/admin/src/i18n/es.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "El adaptador está apagado, para crear un nuevo dispositivo el adaptador debe estar encendido. Por favor, ¡enciende el adaptador!",
+	"adapterOffline": "El adaptador está apagado, para crear un nuevo dispositivo o para editar / borrar el adaptador debe estar encendido. ¡Por favor, encienda el adaptador!",
 	"add": "añade",
 	"addBox": "añadir Caja",
 	"addNewBox": "Añadir nuevo cuadro de sincronización Hue",
 	"cancel": "cancela",
 	"close": "Cerrar",
 	"delete": "Borra",
-	"deleteConfirm": "¿Estás seguro de que quieres borrar > %s <?",
-	"deleteTitle": "%s Borrar",
 	"edit": "Actualiza",
 	"editBoxConfig": "Editar la configuración del cuadro de sincronización Hue",
 	"editConfig": "Edita",
