--- a/admin/src/i18n/fr.json
+++ b/admin/src/i18n/fr.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "L'adaptateur est éteint, pour créer un nouvel appareil, l'adaptateur doit être allumé. Allume l'adaptateur !",
+	"adapterOffline": "L'adaptateur est éteint, pour créer un nouvel appareil ou pour modifier / supprimer l'adaptateur doit être allumé. Veuillez allumer l'adaptateur !",
 	"add": "Ajoute",
 	"addBox": "Ajouter une boîte",
 	"addNewBox": "Ajouter une nouvelle boîte Hue Sync",
 	"cancel": "annuler",
 	"close": "Fermer",
 	"delete": "Supprimer",
-	"deleteConfirm": "Tu es sûre de vouloir supprimer > %s < ?",
-	"deleteTitle": "%s Supprimer",
 	"edit": "Mise à jour",
 	"editBoxConfig": "Modifier la configuration de la boîte de synchronisation Hue",
 	"editConfig": "Modifier",
