--- a/admin/src/i18n/it.json
+++ b/admin/src/i18n/it.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "L'adattatore è spento, per creare un nuovo dispositivo l'adattatore deve essere acceso. Accendi l'adattatore!",
+	"adapterOffline": "L'adattatore è spento, per creare un nuovo dispositivo o per modificarlo/cancellarlo è necessario accendere l'adattatore. Accendere l'adattatore!",
 	"add": "aggiungere",
 	"addBox": "aggiungi Box",
 	"addNewBox": "Aggiungi un nuovo Hue Sync Box",
 	"cancel": "annullamento",
 	"close": "Chiudi",
 	"delete": "Elimina",
-	"deleteConfirm": "Sei sicuro di voler eliminare > %s <?",
-	"deleteTitle": "%s Elimina",
 	"edit": "Aggiornamento",
 	"editBoxConfig": "Modifica la configurazione della Hue Sync Box",
 	"editConfig": "Modifica",
