--- a/admin/src/i18n/nl.json
+++ b/admin/src/i18n/nl.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "De adapter is uitgeschakeld, om een nieuw apparaat te maken moet de adapter ingeschakeld worden. Schakel de adapter in!",
+	"adapterOffline": "De adapter is uitgeschakeld, om een nieuw apparaat aan te maken of te bewerken/wissen moet de adapter ingeschakeld zijn. Zet de adapter aan!",
 	"add": "toevoegen",
 	"addBox": "doos toevoegen",
 	"addNewBox": "Nieuwe Hue Sync Box toevoegen",
 	"cancel": "annuleren",
 	"close": "Sluit",
 	"delete": "Verwijder",
-	"deleteConfirm": "Weet je zeker dat je > %s < wilt verwijderen?",
-	"deleteTitle": "%s Wissen",
 	"edit": "Update",
 	"editBoxConfig": "Hue Sync Box configuratie bewerken",
 	"editConfig": "Bewerk",
