--- a/admin/src/i18n/pl.json
+++ b/admin/src/i18n/pl.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "Adapter jest wyłączony, aby utworzyć nowe urządzenie, adapter musi być włączony. Włącz adapter!",
+	"adapterOffline": "Adapter jest wyłączony, aby utworzyć nowe urządzenie lub edytować / usunąć adapter musi być włączony. Proszę włączyć adapter!",
 	"add": "dodaj",
 	"addBox": "Ajouter une boîte",
 	"addNewBox": "Dodaj nowe urządzenie Hue Sync Box",
 	"cancel": "anuluj",
 	"close": "Zamknij",
 	"delete": "Apagar",
-	"deleteConfirm": "Czy na pewno chcesz usunąć > %s <?",
-	"deleteTitle": "%s Usuń",
 	"edit": "Aktualizacja",
 	"editBoxConfig": "Edytuj konfigurację Hue Sync Box",
 	"editConfig": "Edytuj",
