--- a/admin/src/i18n/ru.json
+++ b/admin/src/i18n/ru.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "Адаптер выключен, для создания нового устройства адаптер должен быть включен. Пожалуйста, включи адаптер!",
+	"adapterOffline": "Адаптер выключен, для создания нового устройства или редактирования/удаления адаптер должен быть включен. Пожалуйста, включите адаптер!",
 	"add": "добавьте",
 	"addBox": "добавьте Box",
 	"addNewBox": "Добавьте новый блок синхронизации Hue",
 	"cancel": "отменить",
 	"close": "Закрыть",
 	"delete": "Удалить",
-	"deleteConfirm": "Ты уверена, что хочешь удалить > %s <?",
-	"deleteTitle": "%s Удалить",
 	"edit": "Обновить",
 	"editBoxConfig": "Редактирование конфигурации Hue Sync Box",
 	"editConfig": "Редактировать",
