--- a/admin/src/i18n/uk.json
+++ b/admin/src/i18n/uk.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "Адаптер вимкнений, для створення нового пристрою необхідно увімкнути адаптер. Будь ласка, увімкніть адаптер!",
+	"adapterOffline": "Адаптер вимкнений, для створення нового пристрою або для редагування/видалення адаптер необхідно увімкнути. Будь ласка, увімкніть адаптер!",
 	"add": "додавати",
 	"addBox": "додати поле",
 	"addNewBox": "Додати нове вікно синхронізації відтінків",
 	"cancel": "скасувати",
 	"close": "Закрити",
 	"delete": "Видалити",
-	"deleteConfirm": "Ви впевнені, що хочете видалити > %s <?",
-	"deleteTitle": "%s Видалити",
 	"edit": "Оновлення",
 	"editBoxConfig": "Редагування конфігурації Hue Sync Box",
 	"editConfig": "Редагувати",
