--- a/admin/src/i18n/zh-cn.json
+++ b/admin/src/i18n/zh-cn.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "适配器是关闭的，要创建一个新的设备，必须打开适配器。请打开适配器!",
+	"adapterOffline": "适配器是关闭的，要创建一个新的设备或编辑/删除，必须打开适配器。请打开适配器!",
 	"add": "增加",
 	"addBox": "添加盒子",
 	"addNewBox": "添加新的Hue Sync Box",
 	"cancel": "取消",
 	"close": "关闭",
 	"delete": "删除",
-	"deleteConfirm": "你确定你要删除>%s <？",
-	"deleteTitle": "删除%s",
 	"edit": "更新",
 	"editBoxConfig": "编辑Hue Sync Box配置",
 	"editConfig": "编辑",
