--- a/admin/src/i18n/pt.json
+++ b/admin/src/i18n/pt.json
@@ -1,13 +1,11 @@
 {
-	"adapterOffline": "O adaptador está desligado, para criar um novo dispositivo o adaptador tem de estar ligado. Por favor liga o adaptador!",
+	"adapterOffline": "O adaptador é desligado, para criar um novo dispositivo ou para editar / apagar o adaptador deve ser ligado. Por favor, ligue o adaptador!",
 	"add": "adicionar",
 	"addBox": "Adicionar Caixa",
 	"addNewBox": "Adicionar nova Hue Sync Box",
 	"cancel": "cancelar",
 	"close": "Fechar",
 	"delete": "Apagar",
-	"deleteConfirm": "Tens a certeza que queres apagar > %s <?",
-	"deleteTitle": "%s Eliminar",
 	"edit": "Actualização",
 	"editBoxConfig": "Editar a configuração da caixa de sincronização de matizes",
 	"editConfig": "Editar",
